{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 94,
  "lineage": "ece2ecdb-1cad-7bc7-6619-7529b6c64206",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230809",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/disks/jenkins-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udapeople-new-395001/zones/us-central1-c/instances/jenkins-server",
            "instance_id": "7719345755021629659",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "MdlgynBS-PU=",
            "metadata_startup_script": "#!/bin/bash\n# Install Jenkins\nsudo apt update\nsudo apt install openjdk-11-jre -y\ncurl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key | sudo tee \\\n/usr/share/keyrings/jenkins-keyring.asc \u003e /dev/null\necho deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] \\\nhttps://pkg.jenkins.io/debian-stable binary/ | sudo tee \\\n/etc/apt/sources.list.d/jenkins.list \u003e /dev/null\nsudo apt-get update\nsudo apt-get install jenkins -y\n [...]
            "name": "jenkins-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.224.249.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "udapeople-new-395001"
              }
            ],
            "project": "udapeople-new-395001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/instances/jenkins-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins-server"
            ],
            "tags_fingerprint": "tO8EzApbwZE=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.compute.module.network.google_compute_network.my_vpc",
            "module.compute.module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230724",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/disks/jumpbox"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udapeople-new-395001/zones/us-central1-c/instances/jumpbox",
            "instance_id": "4180985451277709755",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "yCOOmAz_8gA=",
            "name": "jumpbox",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.90.69",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "udapeople-new-395001"
              }
            ],
            "project": "udapeople-new-395001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/instances/jumpbox",
            "service_account": [
              {
                "email": "897847963527-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jumpbox"
            ],
            "tags_fingerprint": "q5sVPqgssFA=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.compute.module.network.google_compute_network.my_vpc",
            "module.compute.module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postgres_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/disks/postgres-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/udapeople-new-395001/zones/us-central1-c/instances/postgres-db",
            "instance_id": "5255328897113738839",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Vyp9abBBt98=",
            "metadata_startup_script": "sudo sh -c 'echo \"deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main\" \u003e /etc/apt/sources.list.d/pgdg.list'\nwget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -\nsudo apt-get update\nsudo apt-get -y install postgresql\n",
            "name": "postgres-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.244.54",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
                "network_ip": "10.0.2.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "udapeople-new-395001"
              }
            ],
            "project": "udapeople-new-395001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/zones/us-central1-c/instances/postgres-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "postgres-db"
            ],
            "tags_fingerprint": "ul0JkuxL9iI=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.compute.module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/udapeople-new-395001/global/networks/my-vpc",
            "mtu": 1460,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "udapeople-new-395001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-20T22:05:58.601-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/udapeople-new-395001/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "project": "udapeople-new-395001",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/routers/nat-router"
          }
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "udapeople-new-395001/us-central1/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "udapeople-new-395001",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.compute.module.network.google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-11T08:09:57.463-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/udapeople-new-395001/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "udapeople-new-395001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.compute.module.network.google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-11T08:09:57.545-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/udapeople-new-395001/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "udapeople-new-395001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.compute.module.network.google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress_jenkis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-13T08:27:59.829-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-egress-jenkis",
            "log_config": [],
            "name": "allow-egress-jenkis",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-egress-jenkis",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-11T08:12:13.573-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-12T07:39:49.886-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-http-jenkins",
            "log_config": [],
            "name": "allow-http-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-http-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_postgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-11T08:12:13.576-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-http-postgres",
            "log_config": [],
            "name": "allow-http-postgres",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-http-postgres",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "postgres-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-11T08:12:13.527-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server",
              "jumpbox"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-11T08:12:13.974-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/allow-ssh-postgres",
            "log_config": [],
            "name": "allow-ssh-postgres",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/allow-ssh-postgres",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "jumpbox"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "postgres-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-11T08:12:13.517-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-new-395001/global/firewalls/egress-all",
            "log_config": [],
            "name": "egress-all",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-new-395001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-new-395001/global/firewalls/egress-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}